Update release to only run on PR merge

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,9 @@
 name: CI + Release on Main
 
 on:
-  push:
+  pull_request:
+    types:
+      - closed
     branches:
       - main
 
@@ -11,6 +13,7 @@ permissions:
 
 jobs:
   build-test-release:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
