--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,3 +47,6 @@ ignore = [ "E501",]
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
+
+[project.scripts]
+netimate = "netimate.__main__:main"
