--- a/.importlinter.ini
+++ b/.importlinter.ini
@@ -15,6 +15,8 @@ layers =
     netimate.infrastructure
     netimate.core
     netimate.interfaces
+    netimate.errors
+
 
 # ────────────────────────────────────────────────────────────────
 # 2. View isolation
@@ -154,3 +156,19 @@ exclude_modules =
     netimate.interfaces.*
     netimate.infrastructure
     netimate.infrastructure.*
+
+# ────────────────────────────────────────────────────────────────
+# 8. Prevent error module importing any other code
+# ────────────────────────────────────────────────────────────────
+[importlinter:contract:no_internal_imports_in_errors]
+name = Errors module must not import other Netimate packages
+type = forbidden
+source_modules = netimate.errors
+forbidden_modules =
+    netimate.application
+    netimate.core
+    netimate.infrastructure
+    netimate.interfaces
+    netimate.plugins
+    netimate.view
+
