--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 keywords = [ "network automation", "async", "cli", "scrapli", "netmiko", "diff", "snapshot", "devops",]
 classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: System Administrators", "Intended Audience :: Developers", "Intended Audience :: Telecommunications Industry", "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Topic :: System :: Networking", "Topic :: Utilities", "Typing :: Typed",]
-dependencies = [ "netmiko>=4.5.0", "pyyaml>=6.0.2", "scrapli>=2025.1.30", "rich>=14.0.0", "textfsm>=1.1.3", "ttp>=0.9.5", "psycopg2-binary", "asyncssh", "anyio", "prompt-toolkit",]
+dependencies = [ "netmiko>=4.5.0", "pyyaml>=6.0.2", "scrapli>=2025.1.30", "rich>=14.0.0", "textfsm>=1.1.3", "ttp>=0.9.5", "psycopg2-binary", "asyncssh", "anyio", "prompt-toolkit", "pynetbox>=7.0.0",]
 [[project.authors]]
 name = "Simon Di Giovanni"
 email = "s.digiovanni92@gmail.com"
